Redis Encryption implementation to encrypt messages in transit, this is due to Redis not supporting SSL

--- a/src/Microsoft.AspNet.SignalR.Redis/Microsoft.AspNet.SignalR.Redis.csproj
+++ b/src/Microsoft.AspNet.SignalR.Redis/Microsoft.AspNet.SignalR.Redis.csproj
@@ -59,7 +59,9 @@
       <Link>Infrastructure\DispatchingTaskCompletionSource.cs</Link>
     </Compile>
     <Compile Include="DependencyResolverExtensions.cs" />
+    <Compile Include="IMessageEncryptor.cs" />
     <Compile Include="IRedisConnection.cs" />
+    <Compile Include="MessageEncryptor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RedisConnection.cs" />
     <Compile Include="RedisMessage.cs" />
